poc/tests/errors/test_FplVariableAlreadyDeclared_class_03.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            Nat(x, y: Int)
            {
                x: Nat
                self := x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:9:17: The name 'x' was already declared in the current context at (7,17)